# Smart--Contract-Auditor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  agent_learner.py  app.py  client.py  config.py  contracts.py  dashboard.py  ensemble.py  environment.py  inference.py  inference_rl.py  metrics.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_environment.py  train.py
models/: auditor_agent.json
server/: app.py
